--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,4 +15,8 @@ crc16 = "0.4"
 log = "0.4"
 log4rs = { version = "0.13", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
 rocket = "0.4.5"
+rocket_contrib = "0.4.5"
 lazy_static = "1.0"
+serde = "1.0"
+serde_json = "1.0"
+serde_derive = "1.0"
