Changing the configs a little

--- a/log4rs.yaml
+++ b/log4rs.yaml
@@ -10,13 +10,14 @@ appenders:
       pattern: "{d} - {m}{n}"
 
 root:
-  level: info
+  level: debug
   appenders:
     - stdout
+    - application
 
 loggers:
   app:
-    level: info
+    level: debug
     appenders:
       - application
     additive: false
