--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ lazy_static = "1.0"
 serde = "1.0"
 serde_json = "1.0"
 serde_derive = "1.0"
+
+rusoto_core = { version = "0.43", default_features=false, features=["rustls"] }
+rusoto_cloudwatch = { version = "0.43", default_features=false, features=["rustls"] }
