--- a/Rocket.toml
+++ b/Rocket.toml
@@ -3,6 +3,7 @@ address = "0.0.0.0"
 port = 80
 keep_alive = 0
 log = "normal"
+workers = 10
 limits = { forms = 32768 }
 
 [staging]
@@ -10,6 +11,7 @@ address = "0.0.0.0"
 port = 80
 keep_alive = 0
 log = "normal"
+workers = 10
 limits = { forms = 32768 }
 
 [production]
@@ -17,4 +19,5 @@ address = "0.0.0.0"
 port = 80
 keep_alive = 0
 log = "critical"
+workers = 10
 limits = { forms = 32768 }
