--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,7 @@ serialport = "3.3"
 crc16 = "0.4"
 log = "0.4"
 log4rs = { version = "0.13", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
-rocket = "0.4.5"
-rocket_contrib = "0.4.5"
+rocket = { version = "0.5.0-rc.2", features = ["json"] }
 lazy_static = "1.0"
 serde = "1.0"
 serde_json = "1.0"
